migrate to caddy

--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
-# FIXME: define a frontend & backend network, and only expose backend services to the frontend (nginx)
-
 networks:
   backend:
+  frontend:
+
 
 secrets:
   postgres_password:
@@ -14,125 +14,58 @@ secrets:
     file: secrets/livekit/livekit_secret_key
 
 services:
-  # XXX: consider factor out secret generation from the compose.yml
-
-  # dependencies for optionally generating default configs + secrets
-  generate-synapse-secrets:
-    image: ghcr.io/element-hq/synapse:latest
-    user: $USER_ID:$GROUP_ID
-    restart: "no"
-    volumes:
-      - ${VOLUME_PATH}/data/synapse:/data:rw
-      - ${VOLUME_PATH}/init/generate-synapse-secrets.sh:/entrypoint.sh
-    env_file: .env
-    environment:
-      SYNAPSE_CONFIG_DIR: /data
-      SYNAPSE_CONFIG_PATH: /data/homeserver.yaml.default
-      SYNAPSE_SERVER_NAME: ${DOMAIN}
-      SYNAPSE_REPORT_STATS: ${REPORT_STATS}
-    entrypoint: "/entrypoint.sh"
-
-  generate-mas-secrets:
-    restart: "no"
-    image: ghcr.io/element-hq/matrix-authentication-service:latest
-    user: $USER_ID:$GROUP_ID
-    volumes:
-      - ${VOLUME_PATH}/data/mas:/data:rw
-    # FIXME: stop this regenerating a spurious default config every time
-    # We can't do the same approach as synapse (unless use a debug image of MAS) as MAS is distroless and has no bash.
-    command: "config generate -o /data/config.yaml.default"
-
-  # dependency for templating /data-template into /data (having extracted any secrets from any default generated configs)
-  init:
-    build: init
-    user: $USER_ID:$GROUP_ID
-    restart: "no"
-    volumes:
-      - ${VOLUME_PATH}/secrets:/secrets
-      - ${VOLUME_PATH}/data:/data
-      - ${VOLUME_PATH}/data-template:/data-template
-      - ${VOLUME_PATH}/init/init.sh:/init.sh
-    command: "/init.sh"
-    env_file: .env
-    depends_on:
-      generate-synapse-secrets:
-        condition: service_completed_successfully
-      generate-mas-secrets:
-        condition: service_completed_successfully
-
-  nginx:
-    image: nginx:latest
-    restart: unless-stopped
+  caddy:
+    image: lucaslorentz/caddy-docker-proxy:ci-alpine
+    restart: always
     ports:
-      - "80:80"
-      - "443:443"
-      - "8448:8448"
-    # shutdown fast so we can iterate rapidly on compose.yml
-    stop_grace_period: 0s
-    volumes:
-      - ${VOLUME_PATH}/data/nginx/conf.d:/etc/nginx/conf.d
-      - ${VOLUME_PATH}/data/nginx/www:/var/www
-      - ${VOLUME_PATH}/data/ssl:/etc/nginx/ssl
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+      - 80:80
+      - 443:443
+      - 8448:8448
     networks:
+      caddy:
       backend:
-        aliases: # so our containers can resolve the LB
+        aliases:
           - $DOMAIN
           - $HOMESERVER_FQDN
           - $ELEMENT_WEB_FQDN
           - $ELEMENT_CALL_FQDN
           - $MAS_FQDN
-    depends_on:
-      init:
-        condition: service_completed_successfully
-
-  certbot:
-    image: certbot/certbot:latest
-    restart: unless-stopped
     volumes:
-      - ${VOLUME_PATH}/data/certbot/conf:/etc/letsencrypt
-      - ${VOLUME_PATH}/data/certbot/www:/var/www/certbot
-      - ${VOLUME_PATH}/data/ssl:/data/ssl
-    entrypoint: "/bin/sh -c 'trap exit TERM; \
-                 while [ -e /etc/letsencrypt/live ]; \
-                 do sleep 30; certbot --webroot -w /var/www/certbot renew; \
-                 cp /etc/letsencrypt/live/$DOMAIN/*.pem /data/ssl; \
-                 sleep 12h & wait $${!}; \
-                 done;'"
+      - /var/run/docker.sock:/var/run/docker.sock
+      - caddy_data:/data
+    environment:
+      - CADDY_INGRESS_NETWORKS=caddy
 
   postgres:
     image: postgres:latest
     restart: unless-stopped
     volumes:
-      - ${VOLUME_PATH}/data/postgres:/var/lib/postgresql/data:rw
-      - ${VOLUME_PATH}/scripts/create-multiple-postgresql-databases.sh:/docker-entrypoint-initdb.d/create-multiple-postgresql-databases.sh
+      - ./data/postgres:/var/lib/postgresql/data:rw
+      - ./scripts/create-multiple-postgresql-databases.sh:/docker-entrypoint-initdb.d/create-multiple-postgresql-databases.sh
     networks:
       - backend
     environment:
       POSTGRES_MULTIPLE_DATABASES: synapse,mas
-      POSTGRES_USER: matrix # FIXME: use different username+passwords for synapse & MAS DBs.
+      POSTGRES_USER: matrix
       POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
       POSTGRES_INITDB_ARGS: --encoding=UTF8 --locale=C
-      PGDATA: /var/lib/postgresql/data/data # otherwise it clashes with .gitkeep in the parent dir
+      PGDATA: /var/lib/postgresql/data/data
     secrets:
       - postgres_password
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U matrix"]
+      test: [ "CMD-SHELL", "pg_isready -U matrix" ]
       start_period: "1s"
       interval: "1s"
       timeout: "5s"
-    depends_on:
-      init:
-        condition: service_completed_successfully
 
   redis:
     image: redis:latest
     restart: unless-stopped
-    # healthcheck:
-    #   test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
-    #   interval: 1s
-    #   timeout: 3s
-    #   retries: 5
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      interval: 1s
+      timeout: 3s
+      retries: 5
     networks:
       - backend
 
@@ -140,13 +73,20 @@ services:
     image: ghcr.io/element-hq/synapse:latest
     user: $USER_ID:$GROUP_ID
     restart: unless-stopped
+    labels:
+      caddy_0: ${HOMESERVER_FQDN}:8448
+      caddy_0.reverse_proxy: "{{ upstreams 8008 }}"
+      caddy_1: ${DOMAIN}
+      caddy_1.@well-known: "match_regex ^/.well-known/(matrix|element)"
+      caddy_1.handle: "@well-known"
+      caddy_1.handle.root: "* /www/.well-known" 
+      caddy_1.handle.file_server: ""
     volumes:
-      - ${VOLUME_PATH}/data/synapse:/data:rw
-      - ${VOLUME_PATH}/data/ssl/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt
-    # ports:
-    #   - 8008:8008
+      - ./data/synapse:/data/:rw
+      - ./data/www/:/www/:ro
     networks:
       - backend
+      - caddy
     environment:
       SYNAPSE_CONFIG_DIR: /data
       SYNAPSE_CONFIG_PATH: /data/homeserver.yaml
@@ -160,63 +100,22 @@ services:
       init:
         condition: service_completed_successfully
 
-  synapse-generic-worker-1:
-    image: ghcr.io/element-hq/synapse:latest
-    user: $USER_ID:$GROUP_ID
-    restart: unless-stopped
-    entrypoint: ["/start.py", "run", "--config-path=/data/homeserver.yaml", "--config-path=/data/workers/synapse-generic-worker-1.yaml"]
-    healthcheck:
-      test: ["CMD-SHELL", "curl -fSs http://localhost:8081/health || exit 1"]
-      start_period: "5s"
-      interval: "15s"
-      timeout: "5s"
-    networks:
-      - backend
-    volumes:
-      - ${VOLUME_PATH}/data/synapse:/data:rw
-      - ${VOLUME_PATH}/data/ssl/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt
-    environment:
-      SYNAPSE_WORKER: synapse.app.generic_worker
-    # Expose port if required so your reverse proxy can send requests to this worker
-    # Port configuration will depend on how the http listener is defined in the worker configuration file
-    # ports:
-    #   - 8081:8081
-    secrets:
-      - synapse_signing_key
-    depends_on:
-      - synapse
-
-  synapse-federation-sender-1:
-    image: ghcr.io/element-hq/synapse:latest
-    user: $USER_ID:$GROUP_ID
-    restart: unless-stopped
-    entrypoint: ["/start.py", "run", "--config-path=/data/homeserver.yaml", "--config-path=/data/workers/synapse-federation-sender-1.yaml"]
-    healthcheck:
-      disable: true
-    networks:
-      - backend
-    volumes:
-      - ${VOLUME_PATH}/data/synapse:/data:rw # Replace VOLUME_PATH with the path to your Synapse volume
-      - ${VOLUME_PATH}/data/ssl/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt
-    environment:
-      SYNAPSE_WORKER: synapse.app.federation_sender
-    # ports:
-    #   - 8082:8082
-    secrets:
-      - synapse_signing_key
-    depends_on:
-      - synapse
-
   mas:
     image: ghcr.io/element-hq/matrix-authentication-service:latest
     restart: unless-stopped
-    # ports:
-    #   - 8083:8080
     volumes:
-      - ${VOLUME_PATH}/data/mas:/data:rw
-      - ${VOLUME_PATH}/data/ssl/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt
+      - ./data/mas:/data:rw
+    labels:
+      caddy_0: ${DOMAIN}
+      caddy_0.reverse_proxy: "/.well-known/openid-configuration {{ upstreams 8080 }}"
+      caddy_1: ${MAS_FQDN}
+      caddy_1.reverse_proxy: "{{ upstreams 8080 }}"
+      caddy_2: ${HOMESERVER_FQDN}:8448
+      caddy_2.@mas: "match_regex /_matrix/client/(.*)/(login|logout|refresh)"
+      caddy_2.reverse_proxy: "@mas {{ upstreams 8080}}"
     networks:
       - backend
+      - caddy
     # FIXME: do we also need to sync the db?
     command: "server --config=/data/config.yaml"
     depends_on:
@@ -225,30 +124,22 @@ services:
       init:
         condition: service_completed_successfully
 
-  # as a basic local MTA
-  mailhog:
-    image: mailhog/mailhog:latest
-    restart: unless-stopped
-    # ports:
-      # - 8025:8025
-      # - 1025:1025
-    networks:
-      - backend
-
   element-web:
     image: vectorim/element-web:latest
     restart: unless-stopped
-    # ports:
-    #   - 8080:80
+    labels:
+      caddy: ${ELEMENT_WEB_FQDN}
+      caddy.reverse_proxy: "{{ upstreams 80 }}"
     healthcheck:
-      test: ["CMD-SHELL", "wget -q -O /dev/null http://localhost:80/version || exit 1"]
+      test: [ "CMD-SHELL", "wget -q -O /dev/null http://localhost:80/version || exit 1" ]
       start_period: "5s"
       interval: "15s"
       timeout: "5s"
     networks:
       - backend
+      - caddy
     volumes:
-      - ${VOLUME_PATH}/data/element-web/config.json:/app/config.json
+      - ./data/element-web/config.json:/app/config.json
     depends_on:
       init:
         condition: service_completed_successfully
@@ -256,12 +147,14 @@ services:
   element-call:
     image: ghcr.io/element-hq/element-call:latest-ci
     restart: unless-stopped
-    # ports:
-    #   - 8082:80
+    labels:
+      caddy: ${ELEMENT_CALL_FQDN}
+      caddy.reverse_proxy: "{{ upstreams 8080 }}"
     networks:
       - backend
+      - caddy
     volumes:
-      - ${VOLUME_PATH}/data/element-call/config.json:/app/config.json
+      - ./data/element-call/config.json:/app/config.json
     depends_on:
       init:
         condition: service_completed_successfully
@@ -269,13 +162,17 @@ services:
   livekit:
     image: livekit/livekit-server:latest
     restart: unless-stopped
+    labels:
+      caddy: ${LIVEKIT_FQDN}
+      caddy.reverse_proxy: "{{ upstreams 7880 }}"
+      caddy.reverse_proxy.0_header: "Upgrade {header.upgrade}"
+      caddy.reverse_proxy.1_header: "Connection \"upgrade\" "
     volumes:
-      - ${VOLUME_PATH}/data/livekit/config.yaml:/etc/livekit.yaml
+      - ./data/livekit/config.yaml:/etc/livekit.yaml
     command: --config /etc/livekit.yaml --node-ip ${LIVEKIT_NODE_IP}
     ports:
       # - 7880:7880 # HTTP listener
       - 7881:7881 # TCP WebRTC transport, advertised via SDP
-
       # TODO: expose livekit-turn on TCP & UDP 443 via nginx
       # At least this would allow UDP turn on port 443 for better perf.
 
@@ -286,9 +183,8 @@ services:
       #- 50000-60000:50000-60000/udp # UDP media
     networks:
       - backend
+      - caddy
     depends_on:
-      init:
-        condition: service_completed_successfully
       redis:
         condition: service_started
 
@@ -303,9 +199,11 @@ services:
         RUN apk update && apk add bash
         COPY --from=builder /lk-jwt-service /
     restart: unless-stopped
+    labels:
+      caddy: ${LIVEKIT_JWT_FQDN}
+      caddy.reverse_proxy: "{{ upstreams 8080 }}"
     volumes:
-      - ${VOLUME_PATH}/data/ssl/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt
-      - ${VOLUME_PATH}/scripts/livekit-jwt-entrypoint.sh:/entrypoint.sh
+      - ./scripts/livekit-jwt-entrypoint.sh:/entrypoint.sh
     entrypoint: /entrypoint.sh
     env_file: .env
     deploy:
@@ -313,11 +211,63 @@ services:
         condition: on-failure
     networks:
       - backend
+      - caddy
     secrets:
       - livekit_api_key
       - livekit_secret_key
     depends_on:
-      init:
-        condition: service_completed_successfully
       livekit:
         condition: service_started
+
+  synapse-generic-worker-1:
+    image: ghcr.io/element-hq/synapse:latest
+    user: $USER_ID:$GROUP_ID
+    restart: unless-stopped
+    entrypoint: [ "/start.py", "run", "--config-path=/data/homeserver.yaml", "--config-path=/data/workers/synapse-generic-worker-1.yaml" ]
+    labels:
+      caddy: ${HOMESERVER_FQDN}:8448
+      caddy.@sync: "match_regex ^/_matrix/client/(r0|v3)/sync$"
+      caddy.@events: "match_regex ^/_matrix/client/(api/v1|r0|v3)/events$"
+      caddy.@initial-sync: "match_regex ^/_matrix/client/(api/v1|r0|v3)/initialSync$"
+      caddy.@initial-sync-rooms: "match_regex ^/_matrix/client/(api/v1|r0|v3)/rooms/[^/]+/initialSync$"
+      caddy.1_reverse_proxy: "@sync {{ upstreams 8081 }}"
+      caddy.2_reverse_proxy: "@events {{ upstreams 8081 }}"
+      caddy.3_reverse_proxy: "@initial-sync {{ upstreams 8081 }}"
+      caddy.4_reverse_proxy: "@initial-sync-rooms {{ upstreams 8081 }}"
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -fSs http://localhost:8081/health || exit 1" ]
+      start_period: "5s"
+      interval: "15s"
+      timeout: "5s"
+    networks:
+      - backend
+      - caddy
+    volumes:
+      - ./data/synapse:/data:rw
+    environment:
+      SYNAPSE_WORKER: synapse.app.generic_worker
+    secrets:
+      - synapse_signing_key
+    depends_on:
+      - synapse
+
+  synapse-federation-sender-1:
+    image: ghcr.io/element-hq/synapse:latest
+    user: $USER_ID:$GROUP_ID
+    restart: unless-stopped
+    entrypoint: [ "/start.py", "run", "--config-path=/data/homeserver.yaml", "--config-path=/data/workers/synapse-federation-sender-1.yaml" ]
+    healthcheck:
+      disable: true
+    networks:
+      - backend
+    volumes:
+      - ./data/synapse:/data:rw
+    environment:
+      SYNAPSE_WORKER: synapse.app.federation_sender
+    secrets:
+      - synapse_signing_key
+    depends_on:
+      - synapse
+
+volumes:
+  - caddy_data
