--- a/.env-sample
+++ b/.env-sample
@@ -9,7 +9,6 @@
 USER_ID=
 GROUP_ID=
 
-VOLUME_PATH=.
 DOMAIN=example.com
 HOMESERVER_FQDN=matrix.$DOMAIN
 MAS_FQDN=auth.$DOMAIN
@@ -29,14 +28,14 @@ ABUSE_SUPPORT_EMAIL=abuse@$DOMAIN
 SECURITY_SUPPORT_EMAIL=security@$DOMAIN
 
 MAS_CLIENT_ID="0000000000000000000SYNAPSE"
-MAS_EMAIL_FROM='"Matrix Authentication Service" <support@${DOMAIN}>'
-MAS_EMAIL_REPLY_TO='"Matrix Authentication Service" <support@${DOMAIN}>'
+MAS_EMAIL_FROM='"Servicio de autentificación de Matrix" <support@${DOMAIN}>'
+MAS_EMAIL_REPLY_TO='"Servicio de autentificación de Matrix" <support@${DOMAIN}>'
 
 # This should be the public IP of your $LIVEKIT_FQDN.
 # If livekit doesn't work, double-check this.
 LIVEKIT_NODE_IP=127.0.0.1
 
-COUNTRY=GB
+COUNTRY=CL
 
 # as a convenience for creating /etc/hosts
 DOMAINS="$DOMAIN $HOMESERVER_FQDN $MAS_FQDN $ELEMENT_WEB_FQDN $ELEMENT_CALL_FQDN $LIVEKIT_FQDN $LIVEKIT_JWT_FQDN"
