trying to replace domain var again

--- a/.env-sample
+++ b/.env-sample
@@ -28,8 +28,8 @@ ABUSE_SUPPORT_EMAIL=abuse@$DOMAIN
 SECURITY_SUPPORT_EMAIL=security@$DOMAIN
 
 MAS_CLIENT_ID="0000000000000000000SYNAPSE"
-MAS_EMAIL_FROM='"Servicio de autentificación de Matrix" <support@${DOMAIN}>'
-MAS_EMAIL_REPLY_TO='"Servicio de autentificación de Matrix" <support@${DOMAIN}>'
+MAS_EMAIL_FROM='"Servicio de autentificación de Matrix" <support@$DOMAIN>'
+MAS_EMAIL_REPLY_TO='"Servicio de autentificación de Matrix" <support@$DOMAIN>'
 
 # This should be the public IP of your $LIVEKIT_FQDN.
 # If livekit doesn't work, double-check this.
