trying to replace domain var last time

--- a/.env-sample
+++ b/.env-sample
@@ -9,13 +9,13 @@
 USER_ID=
 GROUP_ID=
 
-DOMAIN=example.com
-HOMESERVER_FQDN=matrix.$DOMAIN
-MAS_FQDN=auth.$DOMAIN
-ELEMENT_WEB_FQDN=element.$DOMAIN
-ELEMENT_CALL_FQDN=call.$DOMAIN
-LIVEKIT_FQDN=livekit.$DOMAIN
-LIVEKIT_JWT_FQDN=livekit-jwt.$DOMAIN
+DOMAIN=REPLACE_WITH_DOMAIN
+HOMESERVER_FQDN=matrix.REPLACE_WITH_DOMAIN
+MAS_FQDN=auth.REPLACE_WITH_DOMAIN
+ELEMENT_WEB_FQDN=element.REPLACE_WITH_DOMAIN
+ELEMENT_CALL_FQDN=call.REPLACE_WITH_DOMAIN
+LIVEKIT_FQDN=livekit.REPLACE_WITH_DOMAIN
+LIVEKIT_JWT_FQDN=livekit-jwt.REPLACE_WITH_DOMAIN
 
 REPORT_STATS=yes
 
@@ -23,13 +23,13 @@ IDENTITY_SERVER_URL=https://vector.im
 
 SMTP_HOST=mailhog
 SMTP_PORT=1025
-MAIL_NOTIF_FROM_ADDRESS=noreply@$DOMAIN
-ABUSE_SUPPORT_EMAIL=abuse@$DOMAIN
-SECURITY_SUPPORT_EMAIL=security@$DOMAIN
+MAIL_NOTIF_FROM_ADDRESS=noreply@REPLACE_WITH_DOMAIN
+ABUSE_SUPPORT_EMAIL=abuse@REPLACE_WITH_DOMAIN
+SECURITY_SUPPORT_EMAIL=security@REPLACE_WITH_DOMAIN
 
 MAS_CLIENT_ID="0000000000000000000SYNAPSE"
-MAS_EMAIL_FROM='"Servicio de autentificación de Matrix" <support@$DOMAIN>'
-MAS_EMAIL_REPLY_TO='"Servicio de autentificación de Matrix" <support@$DOMAIN>'
+MAS_EMAIL_FROM='"Servicio de autentificación de Matrix" <support@REPLACE_WITH_DOMAIN>'
+MAS_EMAIL_REPLY_TO='"Servicio de autentificación de Matrix" <support@REPLACE_WITH_DOMAIN>'
 
 # This should be the public IP of your $LIVEKIT_FQDN.
 # If livekit doesn't work, double-check this.
